--- a/CSS/style.css
+++ b/CSS/style.css
@@ -30,6 +30,8 @@ body {
     display: flex;
     flex-direction: column;
     font-size: 1vw;
+    justify-content: center;
+    align-items: center;
 }
 
 /* BODY */
@@ -41,7 +43,7 @@ body {
 .container-geral {
     display: flex;
     width: 50%;
-    margin: auto;
+    /* margin: auto; */
     border-radius: 1em;
     background-color: var(--white);
 }
@@ -89,17 +91,14 @@ body {
 
 .price-container {
     display: flex;
+    align-items: center;
+    gap: 1em;
 }
 
 .price-container h2 {
     color: var(--dark-cyan);
     margin: auto 0;
     font-size: 2.25vw;
-}
-
-.price-container p {
-    margin: auto 1em;
-    text-decoration: line-through;
 }
 
 .button-container {
@@ -169,7 +168,7 @@ body {
         display: block;
         width: 90%;
         height: 130%;
-        margin-top: 3em;
+        /* margin-top: 3em; */
     }
 
     .image-container {
